<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="text_select_category">Select category</string>
    <string name="text_amount">Amount</string>
    <string name="text_all">All</string>
    <string name="text_most_used">Most used</string>
    <string name="text_description">Description</string>
    <string name="text_show_more_details">Show more details</string>
    <string name="text_hide_details">Hide details</string>
    <string name="text_search_location">Search location</string>
    <string name="text_total_amount">Total amount</string>
    <string name="text_set_as_address">Set as address</string>
    <string name="text_select_a_location">Select a location</string>
    <string name="text_with_whom">With whom</string>
    <string name="text_borrower">Borrower</string>
    <string name="Expenses">Expenses</string>
    <string name="app_name">Misa Moneykeeper</string>
    <string name="Income">Income\n</string>
    <string name="Key1">1</string>
    <string name="Key2">2</string>
    <string name="Key3">3</string>
    <string name="Key4">4</string>
    <string name="Key5">5</string>
    <string name="Key6">6</string>
    <string name="Key7">7</string>
    <string name="Key8">8</string>
    <string name="Key9">9</string>
    <string name="Key0">0</string>
    <string name="Key000">000</string>
    <string name="KeyDot">,</string>
    <string name="save_transaction">Save transaction</string>
    <string name="widget_setting_guid">Setting guide</string>
    <string name="KeyC">AC</string>
    <string name="empty_description">Description must not be empty</string>
    <string name="template_recording">Template record</string>
    <string name="scan_bill">Scan bill</string>
    <string name="scan_message">Message scanning</string>
    <string name="add_new_template">Create a template to input data faster</string>
    <string name="expense_template">Expense template</string>
    <string name="income_template">Income template</string>
    <string name="KeyDivide">÷</string>
    <string name="KeyMulti">x</string>
    <string name="KeyMinus">-</string>
    <string name="KeyAdd">+</string>
    <string name="NoImage">No image</string>
    <string name="KeyNegative">±</string>
    <string name="KeyEqual">=</string>
    <string name="Done">Done</string>
    <string name="text_0">0</string>
    <string name="text_vnd">đ</string>
    <string name="text_usd">$</string>
    <string name="text_empty_event">You have no trips or events</string>
    <string name="text_save_transaction">Save Transaction</string>
    <string name="text_save">Save</string>
    <string name="text_account">Account</string>
    <string name="text_account_lower">account</string>
    <string name="text_dashboard">Dashboard</string>
    <string name="text_all_accounts">All accounts</string>
    <string name="text_record_history">Record history</string>
    <string name="text_reports">Reports</string>
    <string name="text_transaction">Transaction</string>
    <string name="text_other">Other</string>
    <string name="text_press_back_again_to_exit">Press back again to exit</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_delete">Delete</string>
    <string name="close">Close</string>
    <string name="alert_icon">Alert icon</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="text_trip_event">Trip/Event</string>
    <string name="text_select_payee_name">Select or enter payee name</string>
    <string name="text_financial_statement">Financial statement</string>
    <string name="text_add_party">Add party</string>
    <string name="text_no_payee_available">No payee available</string>
    <string name="text_account_empty">You have no account!</string>
    <string name="text_add_account">Add Account</string>
    <string name="text_transfer">Transfer</string>
    <string name="text_adjustment">Adjustment</string>
    <string name="text_share_account">Share Account</string>
    <string name="text_edit">Edit</string>
    <string name="text_inactive">Inactive</string>
    <string name="text_saving_account_empty">You have no deposit account!</string>
    <string name="text_add_saving_account">Add saving account</string>
    <string name="text_saving_goal_text">If you want to save &lt;b&gt;50.000.000&lt;/b&gt; for a year to buy a motorbike, please create a saving account for &lt;b&gt;Buy a motorbike. MoneyKeeper&lt;/b&gt; will help you manage this saving account.</string>
    <string name="text_delete_account_warning">
        Deleting this account will also,
        &lt;font color=red&gt;delete all transactions under this account. &lt;b&gt;
        Deleted data cannot be recovered.&lt;/b&gt;&lt;/font&gt;
        Are you sure you want to proceed?</string>
    <string name="text_total_income">Total income</string>
</resources>